libs/@local/hashql/eval/tests/ui/graph/read/entity/field-in-struct-entry.jsonc
//@ run: fail
//@ description: Mentions of the variable inside data constructs are unsupported
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        [".", [".", [".", [".", {"#struct": {"a": "vertex"}}, "a"], "id"], "entity_id"], "entity_uuid"],
        //~^ ERROR path expressions are not supported in data constructs
        "vertex.id.entity_id.entity_uuid"
      ]
    ]
  ]
]
